# TDs_prog-algo_sem2

./: .gitignore  CMakeLists.txt
TD1/src/: fraction.hpp
TD2/: CMakeLists.txt
TD2/src/: exo1.cpp  exo1.hpp  exo2.cpp  exo3.cpp  exo3.hpp  fraction.cpp  main.cpp  token.hpp
TD3/: ex01.cpp
TD3/src/: ex01.cpp  ex02.cpp  ex04.cpp
TD4/src/: ex01.cpp  ex02.cpp  ex03.cpp  exbonus.cpp
TD5/src/: ex01.cpp  ex02.cpp  ex03.cpp
TD6/src/: ex01.cpp  main.cpp  node.cpp  node.hpp
